[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Domoticz4Godot/scripts/DomoticzMainNode.gd" type="Script" id=1]
[ext_resource path="res://scripts/LoopingLabel.gd" type="Script" id=2]
[ext_resource path="res://scenes/DevicesList.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ServerWidget.gd" type="Script" id=4]
[ext_resource path="res://sprites/Tools.svg" type="Texture" id=5]
[ext_resource path="res://scripts/NotificationManager.gd" type="Script" id=6]

[node name="ServerWidget" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DomoticzMainNode" type="Node" parent="VBoxContainer"]
unique_name_in_owner = true
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="UpdateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 992.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 24 )
size_flags_horizontal = 3
text = "UPDATE DEVICES LIST"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/UpdateButton"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="AutoUpdateCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer/UpdateButton/HBoxContainer"]
unique_name_in_owner = true
margin_left = 841.0
margin_right = 992.0
margin_bottom = 24.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Auto on tab change"

[node name="SettingButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 996.0
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
icon = ExtResource( 5 )
icon_align = 1

[node name="DevicesList" parent="VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="NotificationManager" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="UpdateInProgressLabel" type="Label" parent="NotificationManager"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = "Header1Label"
text = "Update in progress..."
align = 1
valign = 1
uppercase = true
script = ExtResource( 2 )
_looping_labels = [ "Update in progress", "Update in progress.", "Update in progress..", "Update in progress..." ]

[node name="NotificationLabel" type="Label" parent="NotificationManager"]
self_modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = "Header1Label"
text = "Notification"
align = 1
valign = 1
uppercase = true
